frontend update to 24.10.000.073